<resources>
    <string name="app_name">Booker</string>
    <string name="settings">Settings</string>
    <string name="my_profile">Profile</string>
    <string name="products">Products</string>
    <string name="treatments">Treatments</string>
    <string name="business_name">Barbershop</string>
    <string name="save">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="login">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="front_page">Front Page</string>
    <string name="service_name">Service name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="email_address">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="booking">Booking</string>
    <string name="start_date">Start date</string>
    <string name="course">Course</string>
    <string name="note">Note…</string>
    <string name="book_time">Book time</string>
    <string name="pick_a_time">Pick a time:</string>
    <string name="haven_t_got_an_account">Haven\'t got an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full name</string>
    <string name="booker">Booker</string>
    <string name="destruct_profile">Destruct profile</string>
    <string name="quit">QUIT</string>
    <string name="edit_profile">Edit profile</string>
    <string name="instructor">Instructor</string>
    <string name="start_time">Start time</string>
    <string name="duration">Duration</string>
    <string name="add">Add</string>
    <string name="sign_out">Sign out</string>
    <string name="add_apprentice">Add apprentice</string>
    <string name="add_treatment">Add treatment</string>
    <string name="view_booking">View booking</string>
    <string name="add_course">Add course</string>
    <string name="show_course">Show course</string>
    <string name="treatment_name">Treatment name</string>
</resources>