<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.Settings"
    android:background="@color/gutbleeding"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/headingOne"
            android:text="@string/settings" />

        <TextView
            style="@style/text"
            android:layout_marginEnd="193dp"
            android:layout_marginBottom="555dp"
            android:text="@string/destruct_profile" />

        <Button
            android:id="@+id/delete"
            style="@style/mainButton"
            android:layout_marginEnd="91dp"
            android:layout_marginBottom="546dp"
            android:text="@string/quit" />

        <TextView
            android:id="@+id/edit_profile"
            style="@style/text"
            android:layout_marginEnd="235dp"
            android:layout_marginBottom="507dp"
            android:text="@string/edit_profile" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>