<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:padding="2dp"
    android:background="@color/gutbleeding"
    >

    <TextView
        android:id="@+id/treatment_name"
        style="@style/recyclerText"
        android:layout_weight="1.5"
        android:background="@color/cyanide"
        android:text="@string/service_name"/>

    <TextView
        android:id="@+id/description"
        style="@style/recyclerText"
        android:layout_weight="3"
        android:background="@color/lightgreen"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/treatment_price"
        style="@style/recyclerText"
        android:layout_weight="1"
        android:background="@color/purpie"
        android:text="@string/price"/>

</LinearLayout>