<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@color/gutbleeding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="131dp" />

        <TextView
            android:id="@+id/login_header"
            style="@style/headingOne"
            android:layout_marginTop="100dp"
            android:text="@string/login" />

        <com.google.android.material.textfield.TextInputLayout
        style="@style/inputLayout"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="405dp"
        android:background="@drawable/text_background">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            style="@style/inputField"
            android:hint="@string/username"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/inputLayout"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/text_background">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:inputType="textPassword"
            style="@style/inputField"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        style="@style/mainButton"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="270dp"
        android:text="@string/login" />

        <TextView
            android:id="@+id/signUpMessage"
            style="@style/text"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="140dp"
            android:text="@string/haven_t_got_an_account" />

        <Button
            android:id="@+id/sign_up"
            style="@style/mainButton"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="85dp"
            android:text="@string/sign_up" />

        <Button
        android:id="@+id/forgot_password"
        style="@style/mainButton"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="270dp"
        android:text="@string/forgot_password" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>