<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_course.AddCourse"
    android:background="@color/gutbleeding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/headingOne"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="538dp"
            android:text="Add course" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="430dp"
            android:background="@drawable/text_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_course_name"
                style="@style/inputField"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="370dp"
            android:background="@drawable/text_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_content"
                style="@style/inputField"
                android:hint="@string/instructor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="310dp"
            android:background="@drawable/text_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/start_date"
                style="@style/inputField"
                android:hint="@string/start_time" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="250dp"
            android:background="@drawable/text_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/end_date"
                style="@style/inputField"
                android:hint="@string/duration" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save"
            style="@style/mainButton"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="185dp"
            android:text="@string/add" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>