<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register_user.RegisterUserActivity"
    android:background="@color/gutbleeding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="131dp" />

        <TextView
            android:id="@+id/header"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="600dp"
            android:text="@string/sign_up"
            style="@style/headingOne" />


        <TextView
            android:id="@+id/name"
            style="@style/text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="272dp"
            android:layout_marginBottom="450dp"
            android:text="@string/full_name" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:background="@drawable/text_background"
            app:hintEnabled="false"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="445dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                style="@style/inputField" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/address"
            style="@style/text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="267dp"
            android:layout_marginBottom="400dp"
            android:text="@string/address" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="390dp"
            android:background="@drawable/text_background"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_address"
                style="@style/inputField"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/phone_number"
            style="@style/text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="267dp"
            android:layout_marginBottom="350dp"
            android:text="@string/phone_number" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="338dp"
            android:background="@drawable/text_background"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_phoneNumber"
                style="@style/inputField" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/email_address"
            style="@style/text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="268dp"
            android:layout_marginBottom="300dp"
            android:text="@string/email_address" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="285dp"
            android:background="@drawable/text_background"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                style="@style/inputField"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/password"
            style="@style/text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="270dp"
            android:layout_marginBottom="240dp"
            android:text="@string/password" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginEnd="15dp"
            android:inputType="textPassword"
            android:layout_marginBottom="230dp"
            android:background="@drawable/text_background"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                style="@style/inputField"/>
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/button_save"
            android:layout_marginEnd="240dp"
            android:layout_marginBottom="100dp"
            style="@style/mainButton"
            android:text="@string/save" />


        <Button
            android:id="@+id/button_cancel"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="100dp"
            android:text="@string/cancel"
            style="@style/mainButton" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>